# dlmalloc

./: CMakeLists.txt  README.md  build.sh  test.c
dlmalloc/: CMakeLists.txt
dlmalloc/include/: dlmalloc.h  memory_hook.h
dlmalloc/src/: dlmalloc.c  memory_hook.c
